tests/sksl/errors/SwitchDuplicateDefault.glsl
### Compilation failed:

error: 4: expected expression, but found 'default'
error: 4: expected expression, but found ':'
error: 5: break statement must be inside a loop or switch
3 errors
